# cato

./: .gitignore  00_START_HERE.md  CATO_ALEX_AUDIT.md  CATO_BUG_REPORT.md  CATO_BUILD_LOG.md  CATO_CLOUD_EFFORT.md  CATO_KRAKEN_VERDICT.md  CATO_UPGRADE_PLAN.md  CATO_VPS_DEPLOY_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_CROSS_REFERENCE_TASKS.md  COMBOS_POSITIONING.md  DARKMIRROR_ANALYSIS.md  DARKMIRROR_SUMMARY.txt  DARKMIRROR_TACTICAL_ROADMAP.md  DESKTOP_APP_AUDIT_TASKS.md  DESKTOP_APP_TASKS.md  Genesis_meta_agent.py  INTEGRATION_TASKS.md  KRAKEN_VERDICT_2C_2D.md  KRAKEN_VERDICT_SHELL_POWERSHELL.md  LAUNCH_CHECKLIST.md  LIVE_E2E_REPORT.md  MATRIX_POSITIONING.md  OPENCLAW_FEATURE_AUDIT.md  PLAN.md  POSITIONING_EXECUTIVE_SUMMARY.md  POSITIONING_INDEX.md  POSITIONING_QUICK_REFERENCE.md  README.md  README_DARKMIRROR.md  REMIXFORGE_ASSUMPTIONS.md  REMIXFORGE_COMPLETION_REPORT.md  REMIXFORGE_EXEC_SUMMARY.md  REMIXFORGE_INDEX.md  REMIXFORGE_README.txt  REMIXFORGE_SCAMPER.md  REMIXFORGE_SHORTLIST.md  REMIXFORGE_VERSIONS.md  (+22 more)
.ralph/: guardrails.md  implementation_plan.md  progress.md  state.md
Desktop App Ralph Loop/: AGENTS.md  IMPLEMENTATION_PLAN.md
New Cato Phases Ralph Loop/: DESKTOP_APP_CATO_PHASES.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  WEB_UI_CATO_PHASES.md
Web UI Ralph Loop/: AGENTS.md  IMPLEMENTATION_PLAN.md
cato/: __init__.py  __main__.py  agent_loop.py  audit.py  budget.py  cli.py  config.py  doctor.py  gateway.py  migrate.py  platform.py  receipt.py  replay.py  router.py  safety.py  skill_validator.py  vault.py
desktop/: build_release.ps1  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  sidecar.rs
docs/: CONDUIT_INTEGRATION.md  CursorImplementations.md  TESTING.md  audit-pipeline.md  remote-mcp.md  setup-linux.md  setup-macos.md  setup-windows.md
logo/: logo40.b64  logo_b64.txt  logo_new.b64
scripts/: run_watchdog.bat  start_watchdog_hidden.vbs  watchdog.py  watchdog_task.xml
tests/: test_anomaly_detector.py  test_audit_chain.py  test_budget.py  test_bug_fixes.py  test_clawflows.py  test_coding_agent_integration.py  test_compaction.py  test_conduit_config.py  test_context_gate.py  test_context_pool.py  test_contradiction_detector.py  test_cron_scheduler.py  test_cursor_subagent.py  test_daily_logs.py  test_decision_memory.py  test_delegation_tokens.py  test_disagreement_surfacer.py  test_distiller.py  test_e2e_cato.py  test_empire_cli.py  test_epistemic_monitor.py  test_file_tool.py  test_gateway_mcp.py  test_github_tool.py  test_habit_extractor.py  test_knowledge_graph.py  test_ledger.py  test_mcp_runtime.py  test_mem0.py  test_memory_upkeep.py  test_pipeline_runtime.py  (+24 more)
(+182 files in other folders)
